<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <id.co.viva.pialadunia.view.ResizableImageView
        android:id="@+id/news_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/image_empty_small" />

    <TextView
        android:id="@+id/news_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/news_image"
        android:layout_alignParentLeft="true"
        android:background="#88000000"
        android:padding="5dp"
        android:text="@string/sample_time"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/news_image"
        android:paddingTop="5dp"
        android:text="@string/sample_title"
        android:textSize="14sp" />

</RelativeLayout>