<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/live_score_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/sample_full_date"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008800"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/live_score_home_flag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/image_empty_flag" />

        <TextView
            android:id="@+id/live_score_scores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sample_score"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/live_score_away_flag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/image_empty_flag" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008800"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/live_score_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/sample_team1"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/live_score_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/sample_team2"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>